// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConversationResolver - guard tests > should throw unauthorized error when invalid token is provided 1`] = `
[
  {
    "extensions": {
      "code": "UNAUTHENTICATED",
      "originalError": {
        "message": "Unauthorized",
        "statusCode": 401,
      },
    },
    "locations": [
      {
        "column": 13,
        "line": 3,
      },
    ],
    "message": "Unauthorized",
    "path": [
      "getUserConversations",
    ],
  },
]
`;

exports[`ConversationResolver - guard tests > should throw unauthorized error, when auth user is not the same as userId requested 1`] = `
[
  {
    "extensions": {
      "code": "UNAUTHENTICATED",
      "originalError": {
        "error": "Unauthorized",
        "message": "Cannot get conversations of another user",
        "statusCode": 401,
      },
    },
    "locations": [
      {
        "column": 13,
        "line": 3,
      },
    ],
    "message": "Cannot get conversations of another user",
    "path": [
      "getUserConversations",
    ],
  },
]
`;
